welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:3: error: ';' expected but '=' found.
move(nbPas:Int, versLAvant:Boolean): move = {
                                          ^